--- a/src/postal/templates/postal/monitor_country_change.html
+++ b/src/postal/templates/postal/monitor_country_change.html
@@ -7,7 +7,7 @@
             data: $(form).serialize(),
             success: function(response) {
                 var data = JSON.parse(response);
-                holder.html(data['postal_address'] + "{%csrf_token%}<input type='submit'/>");
+                $(holder).replaceWith(data['postal_address']);
             },
             error: function(response) {
                 alert(response);
@@ -16,8 +16,8 @@
     }
     
     $.fn.monitor_country_change = function(country_selector){
-        var holder = this;
-        $(country_selector).live('change', function() {
+        $('body').on('change', country_selector, function() {
+            var holder = $(this).closest('div.postal_address');
             var form = $(this).closest('form');
             change_form(form, holder);
         });
